prueba3/javac/TQLParser.java
// Generated from java-escape by ANTLR 4.11.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class TQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, CREATE=9, 
		TOURNAMENT=10, WITH=11, PARTICIPANT=12, ADD=13, TO=14, ORGANIZE=15, ATTRIBUTE=16, 
		DELETE=17, FROM=18, BY=19, REPORT=20, MODIFY=21, MATCH=22, OF=23, ID=24, 
		SHOW=25, PHASE=26, SUMMARY=27, STRING=28, WORD=29, INTEGER=30, WHITESPACE=31;
	public static final int
		RULE_program = 0, RULE_line = 1, RULE_create_query = 2, RULE_specifications = 3, 
		RULE_attributes = 4, RULE_add_query = 5, RULE_delete_query = 6, RULE_modify_query = 7, 
		RULE_organize_query = 8, RULE_report_query = 9, RULE_show_query = 10, 
		RULE_dtype = 11, RULE_pair = 12, RULE_list = 13, RULE_a_identifier = 14, 
		RULE_t_identifier = 15, RULE_p_identifier = 16, RULE_identifier = 17, 
		RULE_name = 18, RULE_abbr = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "line", "create_query", "specifications", "attributes", "add_query", 
			"delete_query", "modify_query", "organize_query", "report_query", "show_query", 
			"dtype", "pair", "list", "a_identifier", "t_identifier", "p_identifier", 
			"identifier", "name", "abbr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "','", "')'", "'{'", "'}'", "':'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "CREATE", "TOURNAMENT", 
			"WITH", "PARTICIPANT", "ADD", "TO", "ORGANIZE", "ATTRIBUTE", "DELETE", 
			"FROM", "BY", "REPORT", "MODIFY", "MATCH", "OF", "ID", "SHOW", "PHASE", 
			"SUMMARY", "STRING", "WORD", "INTEGER", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TQLVisitor ) return ((TQLVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(40);
				line();
				}
				}
				setState(43); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((_la) & ~0x3f) == 0 && ((1L << _la) & 36872704L) != 0 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LineContext extends ParserRuleContext {
		public Create_queryContext create_query() {
			return getRuleContext(Create_queryContext.class,0);
		}
		public Add_queryContext add_query() {
			return getRuleContext(Add_queryContext.class,0);
		}
		public Delete_queryContext delete_query() {
			return getRuleContext(Delete_queryContext.class,0);
		}
		public Modify_queryContext modify_query() {
			return getRuleContext(Modify_queryContext.class,0);
		}
		public Organize_queryContext organize_query() {
			return getRuleContext(Organize_queryContext.class,0);
		}
		public Report_queryContext report_query() {
			return getRuleContext(Report_queryContext.class,0);
		}
		public Show_queryContext show_query() {
			return getRuleContext(Show_queryContext.class,0);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TQLVisitor ) return ((TQLVisitor<? extends T>)visitor).visitLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_line);
		try {
			setState(52);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CREATE:
				enterOuterAlt(_localctx, 1);
				{
				setState(45);
				create_query();
				}
				break;
			case ADD:
				enterOuterAlt(_localctx, 2);
				{
				setState(46);
				add_query();
				}
				break;
			case DELETE:
				enterOuterAlt(_localctx, 3);
				{
				setState(47);
				delete_query();
				}
				break;
			case MODIFY:
				enterOuterAlt(_localctx, 4);
				{
				setState(48);
				modify_query();
				}
				break;
			case ORGANIZE:
				enterOuterAlt(_localctx, 5);
				{
				setState(49);
				organize_query();
				}
				break;
			case REPORT:
				enterOuterAlt(_localctx, 6);
				{
				setState(50);
				report_query();
				}
				break;
			case SHOW:
				enterOuterAlt(_localctx, 7);
				{
				setState(51);
				show_query();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Create_queryContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(TQLParser.CREATE, 0); }
		public TerminalNode TOURNAMENT() { return getToken(TQLParser.TOURNAMENT, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public SpecificationsContext specifications() {
			return getRuleContext(SpecificationsContext.class,0);
		}
		public Create_queryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterCreate_query(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitCreate_query(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TQLVisitor ) return ((TQLVisitor<? extends T>)visitor).visitCreate_query(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Create_queryContext create_query() throws RecognitionException {
		Create_queryContext _localctx = new Create_queryContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_create_query);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(CREATE);
			setState(55);
			match(TOURNAMENT);
			setState(56);
			name();
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(57);
				specifications();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SpecificationsContext extends ParserRuleContext {
		public AttributesContext attributes() {
			return getRuleContext(AttributesContext.class,0);
		}
		public TerminalNode WITH() { return getToken(TQLParser.WITH, 0); }
		public TerminalNode INTEGER() { return getToken(TQLParser.INTEGER, 0); }
		public TerminalNode PARTICIPANT() { return getToken(TQLParser.PARTICIPANT, 0); }
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public SpecificationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specifications; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterSpecifications(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitSpecifications(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TQLVisitor ) return ((TQLVisitor<? extends T>)visitor).visitSpecifications(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpecificationsContext specifications() throws RecognitionException {
		SpecificationsContext _localctx = new SpecificationsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_specifications);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			attributes();
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WITH) {
				{
				setState(61);
				match(WITH);
				setState(62);
				match(INTEGER);
				setState(63);
				match(PARTICIPANT);
				}
			}

			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(66);
				list();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AttributesContext extends ParserRuleContext {
		public List<TerminalNode> WORD() { return getTokens(TQLParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(TQLParser.WORD, i);
		}
		public AttributesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterAttributes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitAttributes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TQLVisitor ) return ((TQLVisitor<? extends T>)visitor).visitAttributes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributesContext attributes() throws RecognitionException {
		AttributesContext _localctx = new AttributesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_attributes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(T__0);
			setState(70);
			match(WORD);
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(71);
				match(T__1);
				setState(72);
				match(WORD);
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(78);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Add_queryContext extends ParserRuleContext {
		public TerminalNode ADD() { return getToken(TQLParser.ADD, 0); }
		public TerminalNode PARTICIPANT() { return getToken(TQLParser.PARTICIPANT, 0); }
		public TerminalNode TO() { return getToken(TQLParser.TO, 0); }
		public T_identifierContext t_identifier() {
			return getRuleContext(T_identifierContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public Add_queryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_add_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterAdd_query(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitAdd_query(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TQLVisitor ) return ((TQLVisitor<? extends T>)visitor).visitAdd_query(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Add_queryContext add_query() throws RecognitionException {
		Add_queryContext _localctx = new Add_queryContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_add_query);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(ADD);
			setState(81);
			match(PARTICIPANT);
			setState(82);
			match(TO);
			setState(83);
			t_identifier();
			setState(86);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STRING:
				{
				setState(84);
				name();
				}
				break;
			case T__6:
				{
				setState(85);
				list();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Delete_queryContext extends ParserRuleContext {
		public TerminalNode DELETE() { return getToken(TQLParser.DELETE, 0); }
		public TerminalNode FROM() { return getToken(TQLParser.FROM, 0); }
		public T_identifierContext t_identifier() {
			return getRuleContext(T_identifierContext.class,0);
		}
		public TerminalNode WORD() { return getToken(TQLParser.WORD, 0); }
		public AttributesContext attributes() {
			return getRuleContext(AttributesContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public Delete_queryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_delete_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterDelete_query(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitDelete_query(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TQLVisitor ) return ((TQLVisitor<? extends T>)visitor).visitDelete_query(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Delete_queryContext delete_query() throws RecognitionException {
		Delete_queryContext _localctx = new Delete_queryContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_delete_query);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(DELETE);
			setState(92);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WORD:
				{
				setState(89);
				match(WORD);
				}
				break;
			case T__0:
				{
				setState(90);
				attributes();
				}
				break;
			case T__6:
				{
				setState(91);
				list();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(94);
			match(FROM);
			setState(95);
			t_identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Modify_queryContext extends ParserRuleContext {
		public TerminalNode MODIFY() { return getToken(TQLParser.MODIFY, 0); }
		public TerminalNode PARTICIPANT() { return getToken(TQLParser.PARTICIPANT, 0); }
		public TerminalNode FROM() { return getToken(TQLParser.FROM, 0); }
		public T_identifierContext t_identifier() {
			return getRuleContext(T_identifierContext.class,0);
		}
		public List<PairContext> pair() {
			return getRuleContexts(PairContext.class);
		}
		public PairContext pair(int i) {
			return getRuleContext(PairContext.class,i);
		}
		public TerminalNode WORD() { return getToken(TQLParser.WORD, 0); }
		public TerminalNode INTEGER() { return getToken(TQLParser.INTEGER, 0); }
		public Modify_queryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modify_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterModify_query(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitModify_query(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TQLVisitor ) return ((TQLVisitor<? extends T>)visitor).visitModify_query(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Modify_queryContext modify_query() throws RecognitionException {
		Modify_queryContext _localctx = new Modify_queryContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_modify_query);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(MODIFY);
			setState(98);
			match(PARTICIPANT);
			setState(99);
			_la = _input.LA(1);
			if ( !(_la==WORD || _la==INTEGER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(100);
			match(FROM);
			setState(101);
			t_identifier();
			setState(102);
			match(T__3);
			setState(103);
			pair();
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(104);
				match(T__1);
				setState(105);
				pair();
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(111);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Organize_queryContext extends ParserRuleContext {
		public TerminalNode ORGANIZE() { return getToken(TQLParser.ORGANIZE, 0); }
		public TerminalNode TOURNAMENT() { return getToken(TQLParser.TOURNAMENT, 0); }
		public T_identifierContext t_identifier() {
			return getRuleContext(T_identifierContext.class,0);
		}
		public TerminalNode BY() { return getToken(TQLParser.BY, 0); }
		public TerminalNode WORD() { return getToken(TQLParser.WORD, 0); }
		public Organize_queryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_organize_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterOrganize_query(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitOrganize_query(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TQLVisitor ) return ((TQLVisitor<? extends T>)visitor).visitOrganize_query(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Organize_queryContext organize_query() throws RecognitionException {
		Organize_queryContext _localctx = new Organize_queryContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_organize_query);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(ORGANIZE);
			setState(114);
			match(TOURNAMENT);
			setState(115);
			t_identifier();
			setState(116);
			match(BY);
			setState(117);
			match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Report_queryContext extends ParserRuleContext {
		public TerminalNode REPORT() { return getToken(TQLParser.REPORT, 0); }
		public A_identifierContext a_identifier() {
			return getRuleContext(A_identifierContext.class,0);
		}
		public TerminalNode OF() { return getToken(TQLParser.OF, 0); }
		public P_identifierContext p_identifier() {
			return getRuleContext(P_identifierContext.class,0);
		}
		public TerminalNode FROM() { return getToken(TQLParser.FROM, 0); }
		public T_identifierContext t_identifier() {
			return getRuleContext(T_identifierContext.class,0);
		}
		public Report_queryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_report_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterReport_query(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitReport_query(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TQLVisitor ) return ((TQLVisitor<? extends T>)visitor).visitReport_query(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Report_queryContext report_query() throws RecognitionException {
		Report_queryContext _localctx = new Report_queryContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_report_query);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(REPORT);
			setState(120);
			a_identifier();
			setState(121);
			match(OF);
			setState(122);
			p_identifier();
			setState(123);
			match(FROM);
			setState(124);
			t_identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Show_queryContext extends ParserRuleContext {
		public TerminalNode SHOW() { return getToken(TQLParser.SHOW, 0); }
		public TerminalNode FROM() { return getToken(TQLParser.FROM, 0); }
		public T_identifierContext t_identifier() {
			return getRuleContext(T_identifierContext.class,0);
		}
		public TerminalNode PHASE() { return getToken(TQLParser.PHASE, 0); }
		public TerminalNode SUMMARY() { return getToken(TQLParser.SUMMARY, 0); }
		public TerminalNode OF() { return getToken(TQLParser.OF, 0); }
		public P_identifierContext p_identifier() {
			return getRuleContext(P_identifierContext.class,0);
		}
		public Show_queryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_show_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterShow_query(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitShow_query(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TQLVisitor ) return ((TQLVisitor<? extends T>)visitor).visitShow_query(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Show_queryContext show_query() throws RecognitionException {
		Show_queryContext _localctx = new Show_queryContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_show_query);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(SHOW);
			setState(127);
			_la = _input.LA(1);
			if ( !(_la==PHASE || _la==SUMMARY) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OF) {
				{
				setState(128);
				match(OF);
				setState(129);
				p_identifier();
				}
			}

			setState(132);
			match(FROM);
			setState(133);
			t_identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DtypeContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(TQLParser.WORD, 0); }
		public TerminalNode INTEGER() { return getToken(TQLParser.INTEGER, 0); }
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public DtypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dtype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterDtype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitDtype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TQLVisitor ) return ((TQLVisitor<? extends T>)visitor).visitDtype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DtypeContext dtype() throws RecognitionException {
		DtypeContext _localctx = new DtypeContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_dtype);
		try {
			setState(138);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WORD:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				match(WORD);
				}
				break;
			case INTEGER:
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				match(INTEGER);
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 3);
				{
				setState(137);
				list();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
